Fixed: Footer menu is not responsive

--- a/assets/scss/responsive/_responsive.scss
+++ b/assets/scss/responsive/_responsive.scss
@@ -549,9 +549,10 @@
 		.#{$prefix}-menu {
 			float: none;
 			width: 100%;
-	 		display: flex;
-	 		align-items: center;
-	 		justify-content: center;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-wrap: wrap;
 		}
 	}
 }
@@ -562,9 +563,10 @@
 		.#{$prefix}-menu {
 			float: none;
 			width: 100%;
-	 		display: flex;
-	 		align-items: center;
-	 		justify-content: center;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-wrap: wrap;
 		}
 	}
 }
